--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <!--[if IE 7]>
     <link rel="stylesheet" href="css/icons/fontello-ie7.css"/>
     <![endif] -->
-
     <script src="js/custom.modernizr.js"></script>
 </head>
 <body>
@@ -42,7 +41,7 @@
                 <img src="./img/tw-logo-2022.png" alt="Thoughtworks" align="center"/>
             </a>
             <h1>Converge 2022, Bengaluru</h1>
-            <p style="opacity:0.8;font-size:0.90em">Converge aims to bring together ideators, designers, analysts,
+            <p>Converge aims to bring together ideators, designers, analysts,
                 solution providers, and technologists to connect, collaborate and learn from each other.</p>
         </div>
     </div>
@@ -100,7 +99,8 @@
             it has been adopted by organizations and technologists.
         </p>
         <br>
-        <p style="color: #47A1AD"><i>Don't forget to register for virtual Converge happening on 25th & 26th March 2022!</i></a></p>
+        <!--        todo remove inline styling, font-dolor consistency black-->
+        <p class="register" style="color: #F2617A;"><i>Don't forget to register for virtual Converge happening on 25th & 26th March 2022!</i></p>
         <br><br>
         <div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdL641Tp3m40NAzVTIPxz9kiipIn4rhzieCZ3TDOl7j-T7hRQ/viewform?usp=sf_link"
@@ -136,7 +136,7 @@
             <div class="large-4 columns time" id="agenda-1"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>2:00PM - 2:10PM</p>
+                <p>14:00 - 14:10</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-1"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
@@ -149,59 +149,61 @@
             <div class="large-4 columns time" id="agenda-2"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>2:20PM - 3:30PM</p>
+                <p>14:20 - 15:30</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-2"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>XaaS : Looking back to look forward<br></p>
+                <p>XaaS : Looking back to look forward<br> Panelists - Muralidharan. N, Madhavi Das,
+                    Rohit Karlo, Namitha Anand <br>
+                    Moderator - Vinodh Shankarnarayan </p>
             </div>
         </div>
         <div class="row">
             <div class="large-4 columns time" id="agenda-4"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>3:35PM - 4:20PM</p>
+                <p>15:35 - 16:20</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-4"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Metaverse as a service</p>
+                <p>Metaverse as a service <br> Vinodh Arumugam </p>
             </div>
         </div>
         <div class="row">
             <div class="large-4 columns time" id="agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>4:20PM - 4:35PM</p>
+                <p>16:20 - 16:35</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Insurance as a service</p>
+                <p>Insurance as a service <br> Ritesh Raj </p>
             </div>
         </div>
         <div class="row">
             <div class="large-4 columns time" id="agenda-7"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>4:40PM - 5:25PM</p>
+                <p>16:40 - 17:25    </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-7"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Symposium</p>
+                <p>Symposium <br> Hari Krishnasubramani </p>
             </div>
         </div><div class="row">
         <div class="large-4 columns time" id="agenda-8"
              data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
              data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-            <p>5:25PM - 5:40PM</p>
+            <p>17:25 - 17:40</p>
         </div>
         <div class="large-8 columns summary" data-anchor-target="#agenda-8"
              data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
              data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-            <p>XaaS as an X</p>
+            <p>XaaS as an X <br> Rithwik Krishnakumar </p>
         </div>
     </div>
         <div class="row">
@@ -216,12 +218,12 @@
             <div class="large-4 columns time" id="agenda-11"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>10:15AM - 11:00AM</p>
+                <p>10:15 - 11:00</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-11"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Keynote</p>
+                <p>Keynote <br> Bharat Kris </p>
             </div>
         </div>
 
@@ -229,12 +231,12 @@
             <div class="large-4 columns time" id="agenda-12"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>11:00AM - 11:15AM</p>
+                <p>11:00 - 11:15</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-12"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Logistics as a Service: Trends and opportunities</p>
+                <p>Logistics as a Service: Trends and opportunities <br> Atul Chopra </p>
             </div>
         </div>
 
@@ -242,12 +244,12 @@
             <div class="large-4 columns time" id="agenda-14"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>11:30AM - 12:15PM</p>
+                <p>11:30 - 12:15</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-14"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Banking backend as a Service</p>
+                <p>AI as a Service: The Next thing for Big Tech <br> Adyot Kumar Srivastava </p>
             </div>
         </div>
 
@@ -255,12 +257,12 @@
             <div class="large-4 columns time" id="agenda-15"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>12:15PM - 12:30PM</p>
+                <p>12:15 - 12:30</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-15"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Retail Stores as a Service (RSaaS)</p>
+                <p>Retail Stores as a Service (RSaaS) <br> Bala Venkat </p>
             </div>
         </div>
 
@@ -268,12 +270,12 @@
             <div class="large-4 columns time" id="agenda-17"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>12:40PM - 1:25PM</p>
+                <p>12:30 - 13:15</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-17"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Symposium</p>
+                <p>Symposium <br> Bhanu Singh </p>
             </div>
         </div>
 
@@ -281,24 +283,24 @@
             <div class="large-4 columns time" id="agenda-18"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>1:25PM - 1:40PM</p>
+                <p>13:25 - 13:40</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-18"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Learning as a Service (LaaS)</p>
+                <p>Learning as a Service (LaaS) <br> Geeta Bose </p>
             </div>
         </div>
         <div class="row">
             <div class="large-4 columns time" id="agenda-20"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>2:15PM - 3:00PM</p>
+                <p>13:40 - 14:25</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-20"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>AI as a Service: The Next thing for Big Tech</p>
+                <p>Banking backend as a Service <br> Gopal Upadhyaya </p>
             </div>
         </div>
 
@@ -306,67 +308,144 @@
             <div class="large-4 columns time" id="agenda-21"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>3:00PM - 3:15PM</p>
+                <p>14:25 - 15:25</p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-21"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Neural Network as a service</p>
+                <p>Neural Network as a service <br> Dhivya Raj </p>
             </div>
         </div>
     </div>
 </section>
 
-<section id="speaker_list" class="speakerList" style="min-height: 50%; text-align: center">
-    <h5 style="padding: 10%; color: #47A1AD">Speaker details will be added soon!</h5>
-</section>
+<!--<section id="speaker_list" class="speakerList" style="min-height: 50%; text-align: center">-->
+<!--    <h5 style="padding: 10%; color: #47A1AD">Speaker details will be added soon!</h5>-->
+<!--</section>-->
 
-<!--<section id="speaker_list" class="speakerList" >
+<!--<section id="speaker_list" class="speakerList" >-->
+
+
+
+<section id="speaker_list" class="speakerList" >
     <div class="header">
         <h2>Speakers</h2>
     </div>
-    <h5>Coming soon</h5>
-     <div class="speakers-list-item speakers-list-item-initial">
-        <img src="./img/2020/kiran.jpg" />
-         <div class="speakers-list-description">
-            <h6>Kiran Anandampillai</h6>
-            <p>Advisor Technology NDHM</p>
+    <div class="speakers-list-item speakers-list-item-initial">
+        <img src="./img/2022/bharatKrishnamurthy.jpg" />
+        <div class="speakers-list-description">
+            <h6>Bharat Krishnamurthy</h6>
+            <p>Vice President</p>
+            <p>Paytm</p>
         </div>
     </div>
-       <div class="speakers-list-item"><img src="./img/2020/kavitha.jpg" />
-           <div class="speakers-list-description">
-               <h6>Kavitha Thyagarajan</h6>
-               <p>Design lead - Digital Platform</p>
+
+    <div class="speakers-list">
+        <div class="speakers-list-item">
+            <img src="./img/2022/adyotKumarSrivastava.jpg" />
+            <div class="speakers-list-description">
+                <h6>Adyot Kumar Srivastava</h6>
+                <p>Business Analyst, CoffeeBeans Consulting</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/atulChopra.jpg" />
+            <div class="speakers-list-description">
+                <h6>Atul Chopra</h6>
+                <p>Product Manager - Retail Practice</p>
                 <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/balakrishna.jpg" />
+            <div class="speakers-list-description">
+                <h6>Balakrishna Parankusam Venkata</h6>
+                <p>Retail Domain Specialist</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/bhanuSingh.jpg" />
+            <div class="speakers-list-description">
+                <h6>Bhanu Singh</h6>
+                <p>Senior Director, XaaS Monetization platform</p>
+                <p>Dell Tech</p>
+            </div>
+        </div>
 
-           </div>
-       </div>
-   </div>-->
-</section>
-
-<!--<section id="speaker_list" class="speakerList" >
-    <div class="header">
-        <h2>Speakers</h2>
-    </div>
-    <h5>Coming soon</h5>
-     <div class="speakers-list-item speakers-list-item-initial">
-        <img src="./img/2020/kiran.jpg" />
-         <div class="speakers-list-description">
-            <h6>Kiran Anandampillai</h6>
-            <p>Advisor Technology NDHM</p>
+        <div class="speakers-list-item"><img style="width:230px ; height:185px" src="./img/2022/dhivyaRaj.jpg"/>
+            <div class="speakers-list-description">
+                <h6>Dhivya Raj</h6>
+                <p>Tech Project Manager, CoffeeBeans Consulting</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/geetaBose.jpg" />
+            <div class="speakers-list-description">
+                <h6>Geeta Bose</h6>
+                <p>Advisory, Digital Transformation and Operation</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/gopalkrishnanUpadhyaya.jpg" />
+            <div class="speakers-list-description">
+                <h6>Gopalakrishnan Upadhyaya</h6>
+                <p>Product Manager - Financial Services</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/hari.jpg" />
+            <div class="speakers-list-description">
+                <h6>Hari Krishnasubramani</h6>
+                <p>Managing Director, Consulting Solutions, PwC</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/madhaviDas.jpg" />
+            <div class="speakers-list-description">
+                <h6>Madhavi Das</h6>
+                <p>Client Principal</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/murali.jpg" />
+            <div class="speakers-list-description">
+                <h6>Muralidharan Neelameghan</h6>
+                <p>Digital Strategist, Hyper Intelligent Automation</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/ritesh.jpg" />
+            <div class="speakers-list-description">
+                <h6>Ritesh Raj</h6>
+                <p>Product Manager, Financial Services</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/rithwik.jpg" />
+            <div class="speakers-list-description">
+                <h6>Rithwik Krishnakumar</h6>
+                <p>Data Scientist</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/rohitKalro.jpg" />
+            <div class="speakers-list-description">
+                <h6>Rohit Kalro</h6>
+                <p>Head, Digital Transformation & Strategy</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/vinodhArumugam.jpg" />
+            <div class="speakers-list-description">
+                <h6>Vinodh Arumugam</h6>
+                <p>Domain Specialist, Retail Practices</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/vinodSankaranarayanan.jpg" />
+            <div class="speakers-list-description">
+                <h6>Vinod Sankaranarayanan</h6>
+                <p>Head - Digital Public Goods and Infrastructure</p>
+                <p>Thoughtworks</p>
+            </div>
         </div>
     </div>
-       <div class="speakers-list-item"><img src="./img/2020/kavitha.jpg" />
-           <div class="speakers-list-description">
-               <h6>Kavitha Thyagarajan</h6>
-               <p>Design lead - Digital Platform</p>
-                <p>Thoughtworks</p>
-
-           </div>
-       </div>
-   </div>-->
 </section>
-
 
 <header id="header" class="feature">
     <div class="fixed">
