[Rikkashini/Twinkle]Updated aligment for speaker section for 2022 edition page

--- a/mar2022.html
+++ b/mar2022.html
@@ -369,8 +369,7 @@
                     <p>Dell Tech</p>
                 </div>
             </div>
-
-            <div class="speakers-list-item"><img style="width:230px ; height:185px" src="./img/2022/dhivyaRaj.jpg"/>
+            <div class="speakers-list-item"><img style="width:180px;" src="./img/2022/dhivyaRaj.jpg"/>
                 <div class="speakers-list-description">
                     <h6>Dhivya Raj</h6>
                     <p>Tech Project Manager, CoffeeBeans Consulting</p>
@@ -401,12 +400,6 @@
                     <h6>Madhavi Das</h6>
                     <p>Client Principal</p>
                     <p>Thoughtworks</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/murali.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Muralidharan Neelameghan</h6>
-                    <p>Digital Strategist, Hyper Intelligent Automation</p>
                 </div>
             </div>
             <div class="speakers-list-item"><img src="./img/2022/ritesh.jpg" />
