[Rikkashini]Updated aligment for speaker section for 2022 edition page

--- a/index.html
+++ b/index.html
@@ -331,12 +331,14 @@
     <div class="header">
         <h2>Speakers</h2>
     </div>
-    <div class="speakers-list-item speakers-list-item-initial">
-        <img src="./img/2022/bharatKrishnamurthy.jpg" />
-        <div class="speakers-list-description">
-            <h6>Bharat Krishnamurthy</h6>
-            <p>Vice President</p>
-            <p>Paytm</p>
+    <div class="speakers-list-item-initial-container">
+        <div class="speakers-list-item speakers-list-item-initial">
+            <img src="./img/2022/bharatKrishnamurthy.jpg" />
+            <div class="speakers-list-description">
+                <h6>Bharat Krishnamurthy</h6>
+                <p>Vice President</p>
+                <p>Paytm</p>
+            </div>
         </div>
     </div>
 
