[Rikkashini]Removed todos

--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
             it has been adopted by organizations and technologists.
         </p>
         <br>
-        <!--        todo remove inline styling, font-dolor consistency black-->
-        <p class="register" style="color: #F2617A;"><i>Don't forget to register for virtual Converge happening on 25th & 26th March 2022!</i></p>
+        <p class="register" ><i>Don't forget to register for virtual Converge happening on 25th & 26th March 2022!</i></p>
         <br><br>
         <div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdL641Tp3m40NAzVTIPxz9kiipIn4rhzieCZ3TDOl7j-T7hRQ/viewform?usp=sf_link"
