[Rikkashini]Updated march2022.html to be consistent with index.html

--- a/mar2022.html
+++ b/mar2022.html
@@ -99,8 +99,7 @@
             it has been adopted by organizations and technologists.
         </p>
         <br>
-<!--        todo remove inline styling, font-dolor consistency black-->
-        <p class="register" style="color: #F2617A;"><i>Don't forget to register for virtual Converge happening on 25th & 26th March 2022!</i></p>
+        <p class="register" ><i>Don't forget to register for virtual Converge happening on 25th & 26th March 2022!</i></p>
         <br><br>
         <div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdL641Tp3m40NAzVTIPxz9kiipIn4rhzieCZ3TDOl7j-T7hRQ/viewform?usp=sf_link"
@@ -195,17 +194,17 @@
                 <p>Symposium <br> Hari Krishnasubramani </p>
             </div>
         </div><div class="row">
-            <div class="large-4 columns time" id="agenda-8"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>17:25 - 17:40</p>
-            </div>
-            <div class="large-8 columns summary" data-anchor-target="#agenda-8"
-                 data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
-                 data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>XaaS as an X <br> Rithwik Krishnakumar </p>
-            </div>
+        <div class="large-4 columns time" id="agenda-8"
+             data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+             data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+            <p>17:25 - 17:40</p>
         </div>
+        <div class="large-8 columns summary" data-anchor-target="#agenda-8"
+             data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
+             data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
+            <p>XaaS as an X <br> Rithwik Krishnakumar </p>
+        </div>
+    </div>
         <div class="row">
             <div class="large-8 columns summary" data-anchor-target="#agenda-10"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
@@ -328,9 +327,10 @@
 
 
 <section id="speaker_list" class="speakerList" >
-        <div class="header">
-            <h2>Speakers</h2>
-        </div>
+    <div class="header">
+        <h2>Speakers</h2>
+    </div>
+    <div class="speakers-list-item-initial-container">
         <div class="speakers-list-item speakers-list-item-initial">
             <img src="./img/2022/bharatKrishnamurthy.jpg" />
             <div class="speakers-list-description">
@@ -339,105 +339,106 @@
                 <p>Paytm</p>
             </div>
         </div>
+    </div>
 
-        <div class="speakers-list">
-            <div class="speakers-list-item">
-                <img src="./img/2022/adyotKumarSrivastava.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Adyot Kumar Srivastava</h6>
-                    <p>Business Analyst, CoffeeBeans Consulting</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/atulChopra.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Atul Chopra</h6>
-                    <p>Product Manager - Retail Practice</p>
-                    <p>Thoughtworks</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/balakrishna.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Balakrishna Parankusam Venkata</h6>
-                    <p>Retail Domain Specialist</p>
-                    <p>Thoughtworks</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/bhanuSingh.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Bhanu Singh</h6>
-                    <p>Senior Director, XaaS Monetization platform</p>
-                    <p>Dell Tech</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img style="width:180px;" src="./img/2022/dhivyaRaj.jpg"/>
-                <div class="speakers-list-description">
-                    <h6>Dhivya Raj</h6>
-                    <p>Tech Project Manager, CoffeeBeans Consulting</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/geetaBose.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Geeta Bose</h6>
-                    <p>Advisory, Digital Transformation and Operation</p>
-                    <p>Thoughtworks</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/gopalkrishnanUpadhyaya.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Gopalakrishnan Upadhyaya</h6>
-                    <p>Product Manager - Financial Services</p>
-                    <p>Thoughtworks</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/hari.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Hari Krishnasubramani</h6>
-                    <p>Managing Director, Consulting Solutions, PwC</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/madhaviDas.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Madhavi Das</h6>
-                    <p>Client Principal</p>
-                    <p>Thoughtworks</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/ritesh.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Ritesh Raj</h6>
-                    <p>Product Manager, Financial Services</p>
-                    <p>Thoughtworks</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/rithwik.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Rithwik Krishnakumar</h6>
-                    <p>Data Scientist</p>
-                    <p>Thoughtworks</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/rohitKalro.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Rohit Kalro</h6>
-                    <p>Head, Digital Transformation & Strategy</p>
-                    <p>Thoughtworks</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/vinodhArumugam.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Vinodh Arumugam</h6>
-                    <p>Domain Specialist, Retail Practices</p>
-                    <p>Thoughtworks</p>
-                </div>
-            </div>
-            <div class="speakers-list-item"><img src="./img/2022/vinodSankaranarayanan.jpg" />
-                <div class="speakers-list-description">
-                    <h6>Vinod Sankaranarayanan</h6>
-                    <p>Head - Digital Public Goods and Infrastructure</p>
-                    <p>Thoughtworks</p>
-                </div>
+    <div class="speakers-list">
+        <div class="speakers-list-item">
+            <img src="./img/2022/adyotKumarSrivastava.jpg" />
+            <div class="speakers-list-description">
+                <h6>Adyot Kumar Srivastava</h6>
+                <p>Business Analyst, CoffeeBeans Consulting</p>
             </div>
         </div>
+        <div class="speakers-list-item"><img src="./img/2022/atulChopra.jpg" />
+            <div class="speakers-list-description">
+                <h6>Atul Chopra</h6>
+                <p>Product Manager - Retail Practice</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/balakrishna.jpg" />
+            <div class="speakers-list-description">
+                <h6>Balakrishna Parankusam Venkata</h6>
+                <p>Retail Domain Specialist</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/bhanuSingh.jpg" />
+            <div class="speakers-list-description">
+                <h6>Bhanu Singh</h6>
+                <p>Senior Director, XaaS Monetization platform</p>
+                <p>Dell Tech</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img style="width:180px;" src="./img/2022/dhivyaRaj.jpg"/>
+            <div class="speakers-list-description">
+                <h6>Dhivya Raj</h6>
+                <p>Tech Project Manager, CoffeeBeans Consulting</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/geetaBose.jpg" />
+            <div class="speakers-list-description">
+                <h6>Geeta Bose</h6>
+                <p>Advisory, Digital Transformation and Operation</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/gopalkrishnanUpadhyaya.jpg" />
+            <div class="speakers-list-description">
+                <h6>Gopalakrishnan Upadhyaya</h6>
+                <p>Product Manager - Financial Services</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/hari.jpg" />
+            <div class="speakers-list-description">
+                <h6>Hari Krishnasubramani</h6>
+                <p>Managing Director, Consulting Solutions, PwC</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/madhaviDas.jpg" />
+            <div class="speakers-list-description">
+                <h6>Madhavi Das</h6>
+                <p>Client Principal</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/ritesh.jpg" />
+            <div class="speakers-list-description">
+                <h6>Ritesh Raj</h6>
+                <p>Product Manager, Financial Services</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/rithwik.jpg" />
+            <div class="speakers-list-description">
+                <h6>Rithwik Krishnakumar</h6>
+                <p>Data Scientist</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/rohitKalro.jpg" />
+            <div class="speakers-list-description">
+                <h6>Rohit Kalro</h6>
+                <p>Head, Digital Transformation & Strategy</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/vinodhArumugam.jpg" />
+            <div class="speakers-list-description">
+                <h6>Vinodh Arumugam</h6>
+                <p>Domain Specialist, Retail Practices</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+        <div class="speakers-list-item"><img src="./img/2022/vinodSankaranarayanan.jpg" />
+            <div class="speakers-list-description">
+                <h6>Vinod Sankaranarayanan</h6>
+                <p>Head - Digital Public Goods and Infrastructure</p>
+                <p>Thoughtworks</p>
+            </div>
+        </div>
+    </div>
 </section>
 
 <header id="header" class="feature">
